overflow bug fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -55,7 +55,8 @@ span.dark{
         display: -webkit-box;
         -webkit-line-clamp: 2;
         -webkit-box-orient: vertical;
-        height: 48px;
+        height: 54px;
+        overflow: hidden;
     }
 
     &:hover {
